@@ -204,29 +204,54 @@
 
 							[column]
 								grow_factor = 6
-								border = "all"
-								border_size = 5
 								vertical_alignment = "top"
 								horizontal_alignment = "left"
 								[grid]
 									[row]
 										[column]
-											#
-											# Emulate the listbox headers' top/bottom padding
-											# here relative to the scroll_label below.
-											#
-											border = "top,bottom"
-											border_size = 5
-											horizontal_alignment = "left"
-											[label]
-												definition = "default"
-												label = _ "Contents"
-											[/label]
+											horizontal_grow = "true"
+											[grid]
+												[row]
+													[column]
+														#
+														# Emulate the listbox headers' top/bottom padding
+														# here relative to the scroll_label below.
+														#
+														border = "top,left,right"
+														border_size = 5
+														horizontal_alignment = "left"
+
+														[label]
+															definition = "default"
+															label = _ "Contents"
+														[/label]
+													[/column]
+
+													[column]
+														border = "top,left,right"
+														border_size = 5
+														horizontal_alignment = "right"
+
+														[button]
+															id = "copy"
+															definition = "action_copy"
+															label = _ "clipboard^Copy"
+															# FIXME: tooltips cause weird interactions with map
+															#        labels while running a GUI2 dialog, so let's
+															#        not use a tooltip yet.
+															#tooltip = _ "Copy this report to clipboard"
+														[/button]
+													[/column]
+												[/row]
+											[/grid]
 										[/column]
 									[/row]
 									[row]
 										[column]
+											border = "left,bottom,right"
+											border_size = 5
 											horizontal_alignment = "left"
+
 											[scroll_label]
 												id = "inspect"
 												definition = "default"
